<resources>
    <string name="app_name" translatable="false">Exercici1</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="StringUsuario">Nombre de usuario: </string>
    <string name="StringContraseña">Contraseña: </string>
    <string name="stringBtnEnviar">ENVIAR</string>
    <string name="hintUsuario">Escribe aqui tu usuario</string>
    <string name="hintPass">Escribe tu contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>